--- a/config.json
+++ b/config.json
@@ -10,7 +10,8 @@
     "AFO": "./ontologies/afo.owl"
   },
   "onto_old": "afo",
-  "onto_new": "afo_new",
-  "path_snipet": ".\\ontology_snipet\\",
-  "path_class_list": ".\\class_lists\\"
+  "onto_new": "afo_new_bascat",
+  "path_snipet": ".\\ontology_snippet\\",
+  "path_class_list": ".\\class_lists\\",
+  "iter_mode": "list"
 }
