--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
     "AFO": "./ontologies/afo.owl"
   },
   "onto_old": "afo",
-  "onto_new": "afo_new",
+  "onto_new": "afo_new_bascat",
   "path_snipet": ".\\ontology_snippet\\",
   "path_class_list": ".\\class_lists\\",
   "iter_mode": "list"
