--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "path": ".\\import\\*.pdf",
-  "ckpt_name": "CatalysisIE/checkpoint/train_demo1_checkpoint.ckpt",
+  "ckpt_name": "CatalysisIE/checkpoint/train_demo1_checkpoint-v4.ckpt",
   "bert_name": "CatalysisIE/pretrained/scibert_domain_adaption",
   "apikey": "f2302a8c33c3c6dc589a1fe03915f376",
   "onto_list": {
@@ -11,7 +11,7 @@
   },
   "onto_old": "afo",
   "onto_new": "afo_new_bascat",
-  "path_snipet": ".\\ontology_snippet\\",
+  "path_snipet": ".\\ontology_snipet\\",
   "path_class_list": ".\\class_lists\\",
   "iter_mode": "list"
 }
